--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <h3>even a smaller heading</h3>
     <p>It is imperative that we do nothing</p>
     <p>We die  here</p>
+    <p>We don add another one</p>
     <footer>
         <p>
             just playing around here
